tests/fail-list1.err
Fatal error: exception Failure("illegal assignment list@{int} = list@{float} in l = @{0.1, 3, 4}")