tests/fail-list1.tu
int main()
{	
	list @{int} l;
	new l;
	l = @{0.1, 3,4};
	
 	return 0;
 } 